application_lb.tf
resource "aws_lb" "web" {
  name               = "${var.owner}-${var.enviroment}-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb.id]
  subnets            = aws_subnet.public.*.id

  tags = merge(local.tags,
    {
      Name = "${var.owner}-${var.enviroment}-alb"
    }
  )
}

resource "aws_lb_listener" "web" {
  load_balancer_arn = aws_lb.web.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.web.arn
  }
}
