internet_gateways.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = merge(local.tags,
    {
      Name = "${var.owner}-${var.enviroment}-igw"
    }
  )
}
